--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Rose-Blanche-and-Violet-Volume-III-of-3_72682
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 72682-h/images/img-cover.jpg
 creator:
   author:
     agent_name: Lewes, George Henry
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/3529
     wikipedia: https://en.wikipedia.org/wiki/George_Henry_Lewes
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72682#Rose-Blanche-and-Violet-Volume-III-of-3
 gutenberg_issued: '2024-01-11'
 gutenberg_type: Text
 identifiers:
